--- a/public/style.css
+++ b/public/style.css
@@ -17,12 +17,15 @@ body {
 }
 
 nav {
-  background-color: #007C8C;
+  background-color: darkblue;
+  font-family: Arial, Helvetica, sans-serif;
+  font-stretch: expanded;
+  font-weight: bold;
   color: #ffffff;
   height: 80px;
   padding: 10px;
   line-height: 3;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 
 a,
@@ -161,6 +164,7 @@ button {
   padding: 10px;
   background: linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
 }
+
 
 #toast {
   border-radius: 4px;
